[gd_scene load_steps=14 format=3 uid="uid://crpgr01jhg648"]

[ext_resource type="Texture2D" uid="uid://jek8epmc7k1l" path="res://art/playerGrey_up1.png" id="1_mdl7e"]
[ext_resource type="Script" uid="uid://cahn6qfux8pnx" path="res://scenes/player/player.gd" id="1_npwbq"]
[ext_resource type="Texture2D" uid="uid://2avn7ujkychw" path="res://art/playerGrey_walk1.png" id="1_v6fml"]
[ext_resource type="Texture2D" uid="uid://bmsidyosur4ro" path="res://art/playerGrey_walk2.png" id="2_3li8b"]
[ext_resource type="Texture2D" uid="uid://cj2jnmruxldhs" path="res://art/playerGrey_up2.png" id="2_qu4a1"]
[ext_resource type="Script" uid="uid://dkwttiveb0mf8" path="res://classes/state_machine.gd" id="5_tpg5x"]
[ext_resource type="Script" uid="uid://2x55g712ev1h" path="res://scenes/player/idle.gd" id="7_pn6s4"]
[ext_resource type="Script" uid="uid://b6ejoqafco0li" path="res://scenes/player/jump.gd" id="8_7oing"]
[ext_resource type="Script" uid="uid://bd1spfqy4p27o" path="res://scenes/player/run.gd" id="9_5stf6"]
[ext_resource type="Script" uid="uid://cj7l8nisd0dcw" path="res://scenes/player/attack.gd" id="10_7oing"]
[ext_resource type="Script" uid="uid://bvikrv2813wrp" path="res://scenes/player/slide.gd" id="11_5stf6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5q5h1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_v6fml")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_v6fml")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qu4a1")
}, {
"duration": 1.0,
"texture": ExtResource("1_mdl7e")
}],
"loop": true,
"name": &"jump",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_v6fml")
}, {
"duration": 1.0,
"texture": ExtResource("2_3li8b")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mdl7e"]
radius = 24.2152
height = 60.9865

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_npwbq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_5q5h1")
animation = &"attack"
frame_progress = 0.32829

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(-1, -2)
scale = Vector2(1.115, 1.115)
shape = SubResource("CapsuleShape2D_mdl7e")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_tpg5x")
metadata/_custom_type_script = "uid://dkwttiveb0mf8"

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("7_pn6s4")
metadata/_custom_type_script = "uid://2x55g712ev1h"

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("8_7oing")
metadata/_custom_type_script = "uid://b6ejoqafco0li"

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource("9_5stf6")
metadata/_custom_type_script = "uid://bd1spfqy4p27o"

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource("10_7oing")
metadata/_custom_type_script = "uid://cj7l8nisd0dcw"

[node name="SlideState" type="Node" parent="StateMachine"]
script = ExtResource("11_5stf6")
metadata/_custom_type_script = "uid://bvikrv2813wrp"
